--- a/Building-Apps-React-Redux/package.json
+++ b/Building-Apps-React-Redux/package.json
@@ -1,55 +1,45 @@
 {
-  "name": "ps-redux",
-  "description": "React and Redux Pluralsight course by Cory House",
-  "scripts": {},
   "dependencies": {
-    "bootstrap": "5.0.2",
-    "immer": "^9.0.21",
-    "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.4",
-    "react-router-dom": "5.2.0",
-    "react-toastify": "7.0.4",
-    "redux": "4.1.0",
-    "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "immer": "^10.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8"
   },
   "devDependencies": {
-    "@babel/core": "7.14.6",
-    "@testing-library/react": "^12.1.5",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "babel-preset-react-app": "10.0.0",
-    "css-loader": "5.2.6",
-    "cssnano": "5.0.6",
-    "enzyme": "3.11.0",
-    "eslint": "7.30.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-react": "7.24.0",
-    "fetch-mock": "9.11.0",
-    "html-webpack-plugin": "5.3.2",
+    "@babel/core": "^7.21.8",
+    "@testing-library/react": "^14.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
+    "babel-preset-react-app": "^10.0.1",
+    "css-loader": "^6.7.4",
+    "cssnano": "^6.0.1",
+    "enzyme": "^3.11.0",
+    "eslint": "^8.41.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "fetch-mock": "^9.11.0",
+    "html-webpack-plugin": "^5.5.1",
     "http-server": "^14.1.1",
-    "jest": "27.0.6",
+    "jest": "^29.5.0",
     "json-server": "^0.17.3",
-    "mini-css-extract-plugin": "2.1.0",
-    "node-fetch": "^2.6.11",
-    "npm-run-all": "4.1.5",
+    "mini-css-extract-plugin": "^2.7.6",
+    "node-fetch": "^3.3.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
-    "postcss-loader": "6.1.1",
-    "react-test-renderer": "17.0.2",
-    "redux-immutable-state-invariant": "2.1.0",
-    "redux-mock-store": "1.5.4",
-    "rimraf": "3.0.2",
-    "style-loader": "3.0.0",
+    "postcss-loader": "^7.3.0",
+    "react-test-renderer": "^18.2.0",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.5.4",
+    "rimraf": "^5.0.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.83.1",
-    "webpack-bundle-analyzer": "4.4.2",
-    "webpack-cli": "4.10.0",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
-  },
-  "engines": {
-    "node": ">=8"
   }
 }
